<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="text"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_user"
        android:inputType="text"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_user"
        android:inputType="text"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quieres_ser_premium"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rbg_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_yes" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_no" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>