<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:text="@string/bienvenido"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/red"
        android:text="@string/inicia_sesi_n"
        />
    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100sp"
        android:layout_marginBottom="10sp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop ="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/inicia_ses"
        android:background="@drawable/round_btn"
        android:layout_marginTop="40dp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_una_cuenta"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvSignUp"
        android:layout_height="wrap_content"
        android:text="@string/registrate_ini"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"/>

</LinearLayout>
</LinearLayout>