<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />
    <!--  boton para cerrar sesion  -->

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="636dp"
        android:background="@drawable/stripe_link_back"
        android:contentDescription="@string/title_museum"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_uns"
        android:layout_width="155dp"
        android:layout_height="131dp"
        android:contentDescription="@string/title_museum"
        android:paddingTop="15dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />


    <ImageView
        android:id="@+id/image_portada"
        android:layout_width="294dp"
        android:layout_height="313dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/title_museum"
        android:src="@drawable/ic_portada"
        app:layout_constraintBottom_toTopOf="@+id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/description"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/user"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>